syntax = "proto3";

option csharp_namespace = "TradeMarket.Relay";
import "google/protobuf/timestamp.proto";
import "common.proto";

package TradeBot.TradeMarket.Relay;

service OrderProviderService{
	/*
		Подписывается на ордера выбранного типа
	*/
	rpc SubscribeOrders(SubscribeOrdersRequest) returns (stream SubscribeOrdersReply);
}
message SubscribeOrdersRequest{
	TradeBot.Common.OrderSignature signatures = 1;
}

message SubscribeOrdersReply{
	TradeBot.Common.Order simple_order_info = 1; 
}